# sql-schema-studio

./: .gitignore  CONTRIBUTING.md  README.md  ROADMAP.md  __init__.py  pyproject.toml  requirements.txt
.github/: build-rpm.yml  tests.yml
.github/workflows/: build-deb.yml  build-rpm.yml  check-pr.yml  tests.yml
scripts/: __init__.py
scripts/packaging/: build_deb.sh  build_rpm.sh
scrshots/: README.md
src/: __init__.py  actions.py  app.py  config.py  main.py
src/analytics/: __init__.py  engine.py  index_advisor.py
src/analytics/visualizations/: __init__.py
src/core/: __init__.py  db_connector.py  query_executor.py  query_history.py  schema_parser.py  ssh_tunnel.py  worker_pool.py
src/hooks/: __init__.py  base_plugin.py  bridge.py  registry.py  sandbox.py
src/hooks/perl/: __init__.py  executor.py
src/hooks/perl_hooks/: log_parser.pm
src/hooks/python/: __init__.py  executor.py
src/hooks/python_hooks/: auto_vacuum_advisor.py  data_generator.py  forecasting.py  keboola_normalizer.py  schema_anomaly.py
src/models/: __init__.py  column.py  relationship.py  table.py
src/resources/: __init__.py
src/resources/desktop/: sql-schema-studio.desktop
src/resources/ui/: __init__.py  style.css
src/ui/: __init__.py  ai_tools.py  browser.py  editor.py  editor_tabs.py  menubar.py  results.py  schema_designer.py  statusbar.py  toolbar.py  window.py
src/ui/dialogs/: __init__.py  about.py  column_editor.py  connection.py  hook_manager.py  keboola_config.py  preferences.py  query_history_dialog.py
src/ui/editor/: __init__.py  editor_tab.py  editor_tabs.py  keywords.py
src/ui/results/: __init__.py  panels.py  terminal_themes.py
src/ui/schema_designer/: __init__.py  designer.py  drawing.py  models.py  routing.py  worker_bridge.py
src/ui/window/: __init__.py  actions.py  dialogs.py  window.py
src/utils/: __init__.py  gtk_helpers.py  logging.py  settings.py  signal_handlers.py
tests/: __init__.py  conftest.py  test_db_connector.py  test_models.py  test_query_executor.py
